cargo-features = ["workspace-inheritance"]

[package]
description = "Created with Anchor"
edition = "2021"
name = "openbook-v2"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "openbook_v2"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
test-bpf = ["client"]
client = ["solana-sdk", "no-entrypoint"]
# Enables GPL-licensed parts of the code. See LICENSE file.
enable-gpl = []


[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"] }
anchor-spl = { workspace = true }
arbitrary = { version = "~1.0", features = ["derive"], optional = true }
bytemuck = { version = "^1.7.2", features = ["derive", "min_const_generics"] }
fixed = { workspace = true, features = ["serde", "borsh", "debug-assert-in-release"] }
solana-security-txt = "1.1.1"
solana-program = { workspace = true }
solana-sdk = { workspace = true, optional = true }


[dev-dependencies]
